<resources>
    <string name="app_name">WeAlert</string>
    <!--App label-->
    <string name="title_left">WeFly </string>
    <string name="title_right">WeConnect </string>
    <!--Profil-->
    <string name="user_name">Username </string>
    <string name="password">Password</string>
    <string name="sending">Sending...</string>

    <!--SMS-->
    <string name="send_sms">send a SMS</string>
    <string name="title_sms">SMS</string>
    <string name="sms_sent">SMS sent</string>
    <string name="sms_send_error">Error SMS not sent</string>
    <!--EMAIL-->
    <string name="title_email">EMAIL</string>
    <string name="send_email">Send an email</string>
    <string name="email_sent">Email sent</string>
    <string name="email_send_error">Error Email not sent</string>
    <!--ALERT-->
    <string name="title_alert">ALERT</string>
    <string name="send_alert">sent an alert</string>
    <string name="alert_sent">Alert sent</string>
    <string name="alert_send_error">Alert not sent</string>
    <string name="exit">Exit</string>
    <string name="empty_string">Empty string</string>
    <string name="recipients">Recipient(s)</string>
    <string name="content">Content</string>
    <string name="email">Email</string>
    <string name="object">Object</string>
    <string name="title">Title</string>
    <string name="attachement">Attachments</string>
    <string name="send">Send</string>
    <string name="sender">Sender</string>
    <string name="cancel">cancel</string>
    <string name="category">Categories</string>
    <string name="send_by">Send By</string>
    <string name="from">From</string>
    <string name="empty_object">The Object field cannot be empty</string>

    <!--Dialog-->
    <string name="request_title">save</string>
    <string name="request_msg">your message will be kept for future use?</string>
    <string name="save">SAVE</string>
    <string name="save_ok">Successfully saved</string>
    <string name="save_error">Error,not saved</string>

    <string name="loading_gps">Initialize,be patient...</string>
    <string name="loading_recipients">Loading recipients,be patient..</string>

    <!--PERMISSION-->
    <string name="error_permission_all_right">in your settings</string>
    <string name="error_permission_all_left">please grant permissions</string>
    <string name="error_permission_all_title">recall</string>
    <string name="permission_preference">PERMISSION_PREFERENCE</string>

    <!--INTERNET-->
    <string name="error_no_internet">No internet connection</string>
    <string name="error_no_connection">No internet connection</string>
    <string name="off_line">offline</string>
    <string name="retry">Retry</string>
    <string name="password_empty">password empty</string>
    <string name="name_empty">username empty</string>
    <string name="empty_content">please fill the content field</string>
    <string name="empty_recipient">please add at least one recipient</string>
    <string name="error_login">Error:username or password not valid</string>
    <string name="connecting">connecting</string>
    <string name="saving">saving</string>
    <string name="sending_short">send</string>

    <!--Location-->
    <string name="mlocation_permission_dialog_title">Location service disabled</string>
    <string name="mlocation_permission_dialog_message">In order to continue,authorize WeAlert to acces your location</string>
    <string name="location_service_disable">In order to continue,authorize your device to enable your location</string>
    <string name="not_now">not now</string>
    <string name="yes">Oui</string>

    <!--Fontello Icon-->
    <string name="icon_select_image">&#xe816;</string>
    <string name="icon_select_audio">&#xf130;</string>
    <string name="ic_fonte_error_api">&#xe89e;</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="Pix_hint">Take a Picture</string>
    <string name="Rec_hint">Record a sound</string>
    <string name="recipient_name_hint">Enter a recipient name</string>
    <string name="stop_and_save">Stop Recording and save</string>
    <string name="recording...">Recording</string>
    <string name="perimeter">perimeter</string>
    <string name="area">area</string>
    <string name="more_details">More Details</string>
    <string name="next">NEXT</string>
    <string name="your_attachments_list">YOUR ATTACHMENTS:</string>
    <string name="task_completed">Task Completed!</string>
    <string name="show_sent_alert_list">Show sent alerts list...</string>
    <string name="account">Account</string>
    <string name="error_api">An error has occurred</string>
    <string name="recording">recording...</string>
    <string name="dialog_return">Home</string>
    <string name="voice_record_desc">message vocal</string>
    <string name="processing">Processing...</string>
    <string name="choose_recipients">Choose recipients:</string>
    <string name="send_nom">SEND NOW</string>
    <string name="disagree_dialog">Please Restart the application and Agree the Terms and conditions usages</string>
    <string name="disagree_closer_title">TERMS AND CONDITIONS DISAGREE</string>
    <string name="disagree_close_btn">RESTART</string>
    <string name="options_agree">AGREE</string>
    <string name="options_disagree">DISAGREE</string>
</resources>
