<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/lblSendDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#386b1b"
        android:gravity="center_horizontal|top"
        android:padding="5dp"
        android:text="@string/your_attachments_list"
        android:textColor="#FFFF"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/pieceToSend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:id="@+id/alertForm"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <include layout="@layout/fragment_alert_form" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageButton
                android:id="@+id/recordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:backgroundTint="#FFFF"
                android:contentDescription="@string/voice_record_desc"
                android:src="@drawable/microphone" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#386b1b"
                android:text="@string/next"
                android:textColor="#FFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/transparent">
        <FrameLayout
            android:id="@+id/fab_menu"
            android:layout_width="match_parent"
            android:layout_height="66dp">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/menu"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="#386b1b"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/fab_menu" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>