<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:elevation="@dimen/elevation_custom"
      android:background="@drawable/layout_rectangle"
      android:paddingBottom="@dimen/activity_vertical_margin_custom"
      android:paddingLeft="@dimen/activity_horizontal_margin_custom"
      android:paddingStart="@dimen/activity_horizontal_margin_custom"
      android:paddingRight="@dimen/activity_horizontal_margin_custom"
      android:paddingEnd="@dimen/activity_horizontal_margin_custom"
      android:paddingTop="@dimen/activity_vertical_margin_custom"
      android:layout_marginTop="@dimen/activity_vertical_margin_top_cus_frag"
      android:layout_marginLeft="@dimen/activity_horizontal_margin_custom"
      android:layout_marginStart="@dimen/activity_horizontal_margin_custom"
      android:layout_marginEnd="@dimen/activity_horizontal_margin_custom"
      android:layout_marginRight="@dimen/activity_horizontal_margin_custom">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <android.support.v7.widget.AppCompatImageButton
          android:id="@+id/btnClose"
          android:src="@drawable/ic_close"
          android:backgroundTint="@android:color/transparent"
          android:layout_gravity="end"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />

      <com.wefly.wecollect.utils.design.RobotoTextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:gravity="center_horizontal"
          android:text="@string/title_email"
          android:textSize="@dimen/title_text_small_size"
          app:typeface="robotoBoldCondensed"
          android:textStyle="bold"
          android:textColor="@color/colorTitleGreen"
          android:padding="5dp"/>

      <include layout="@layout/recipients_layout"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/chipAttachement"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:hint="@string/attachement"/>
      </LinearLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/objectEdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/objet"
            style="@style/ObjectStyle"
            />
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >
        <EditText
            android:id="@+id/contentEdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            style="@style/ContentStyle"
            />
      </android.support.design.widget.TextInputLayout>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:gravity="center_horizontal"
          style="@style/BottomMenuStyle"
          android:clipToPadding="false"
          android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

          <android.support.v7.widget.AppCompatImageButton
              android:id="@+id/btnCancel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/img_cancel"
              android:backgroundTint="@android:color/transparent"
              android:layout_gravity="left|center_horizontal"
              android:gravity="left|center_horizontal"
              />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

          <android.support.v7.widget.AppCompatImageButton
              android:id="@+id/btnSend"
              android:src="@drawable/img_send"
              android:layout_marginEnd= "@dimen/image_padding"
              android:backgroundTint="@android:color/transparent"
              android:layout_gravity="right|center_horizontal"
              android:gravity="right|center_horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

        </LinearLayout>

      </LinearLayout>


    </android.support.v7.widget.LinearLayoutCompat>

  </ScrollView>

</LinearLayout>
